fix icon alignement

--- a/modules/_vertical-cards.scss
+++ b/modules/_vertical-cards.scss
@@ -1,6 +1,7 @@
 .vertical-card{
     figure{
         margin: 5px 15px 0;
+        position: relative;
     }
     figcaption{
         margin: 15px 10px 0;
